added vertx example